[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://bar-fill.png" type="Texture" id=3]
[ext_resource path="res://bar-background.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RockSpawn" type="Position2D" parent="."]
position = Vector2( 20, -6 )

[node name="Debug" type="Sprite" parent="."]
visible = false
position = Vector2( 20, -6 )
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 1 )

[node name="Distance" type="Sprite" parent="."]
visible = false
position = Vector2( 116, -2.38419e-07 )
scale = Vector2( 0.015625, 0.46875 )
texture = ExtResource( 1 )

[node name="RockThrowProgressBar" type="TextureProgress" parent="."]
visible = false
margin_left = -20.0
margin_top = -28.0
margin_right = 20.0
margin_bottom = 12.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RockThrowTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
